--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 /*
 Project Name: Blank Template
 Client: Your Client
@@ -44,20 +45,29 @@ Developer @GA in NYC
 /******************************************
 /* BASE STYLES
 /*******************************************/
-header{
-
-}
 
 h2 {
   font-size: 40px;
   font-family: bold;
   font-weight:600;
+  
+  float: left;
 }
-
 h3{
-  font-size: 40px;
+font-size: 40px;
   font-family: bold;
   font-weight:600;
+ /* border: 1px solid purple;*/
+  float: left;
+}
+h6 a{
+  text-decoration: none;
+}
+h6 a:hover{color:white;}
+p:first-letter{
+  font-size: 70px;
+  font-weight: 600;
+  font-family: bold;
 }
 
 
@@ -67,7 +77,7 @@ body {
   font-size: 24px;
   line-height: 1.4;
   font-weight: 100;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans',  Helvetica, Arial, sans-serif;
   height: 100%;
 }
 
@@ -83,7 +93,7 @@ body {
   position:relative;
 }
 
-li {
+nav li {
   color: #f9e42e;
   padding-right: 40px;
   text-decoration: none;
@@ -92,6 +102,15 @@ li {
   display: inline-block;
   text-align:left;
 }
+nav li a{
+  color: #f9e42e;
+  font-family: bold;
+  font-weight: 600;
+  background-color: #033048;
+  text-decoration: none;
+
+}
+nav li a:hover{color:white;}
 
 ul{
   margin-right: 94px;
@@ -109,11 +128,30 @@ footer {
   bottom: 0;
   left: 0;
   padding: 1rem;
-  background-color: #efefef;
+  background-color: #033048;
   text-align: center; /* Height of the footer */
-  border: 1px solid green;
+  /*border: 1px solid green;*/
 }
 
+footer a{
+  display: inline-block;
+  list-style: none;
+  margin: 0 26px 75px;
+
+}
+footer p {
+font-size: 18px;
+color:#fff;
+font-weight: 600;
+}
+footer h5{
+color: #f9e42e;
+font-family: bold;
+font-weight: 900;
+padding-top: 25px;
+padding-bottom: 50px;
+
+}
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
@@ -123,58 +161,124 @@ footer {
   height: 873px;
   right:105px;
 }
-
 #Article2{
   width: 700px;
   height:880px;
   right:105px;
   padding-bottom: 400px;
 }
-
 #Callto{}
 #AboutRelaxer{}
 #Adunit{}
-
 */
 header {
-  border: 1px solid orange;
+/*border: 1px solid orange;*/
   height: 100px;
   clear: both;
+  background-color: #033048;
 }
 header h1 {
-  border: 1px solid purple;
+  /*border: 1px solid purple;*/
   float: left;
   margin-top: 0;
+  font-size: 40px;
+  font-family: bold;
+  font-weight:600;
+  padding-left: 90px;
+  padding-top: 25px;
+  color:#FFFFFF; 
 }
 nav {
-  border: 1px solid green;
+/*border: 1px solid green;*/
   float: right;
+  padding-top: 30px;
+  
 }
 #container {
   clear: both;
   float:left;
-  border: 1px solid red;
+  /*border: 1px solid red;*/
   width: 70%;
+  padding-left: 50px;
 }
 
-#Navigationbar{
-  float: right;
-  font-family: bold;
-  font-weight: 600;
-  left:0; right:0
-  height: 92px;
-  background-color: #033048;
-  color: #f9e42e;
-}
 #Sidebar{
   position:absolute;
-  top: 191px;
+  top: 130px;
   bottom: 0;
-  right: 0;
+  right: 130px;
   width: 240px;
 }
+#Sidebar li a{
+  display: block;
+  text-decoration:none;
+}
+#Sidebar li a:hover{color:white;}
 
-.Read{
+#Sidebar ol{
+  padding-bottom: 50px;
+}
+#Sidebar h4{
+  font-size: 32px;
+  font-family: bold;
+  font-weight:900;
+}
+#Sidebar h5{
+  font-size:32px;
+  font-family: bold;
+  font-weight: 900;
+}
+#Sidebar p{
+  font-size: 22px;
+  font-weight:100;
+}
+#Sidebar h6{
+  font-family: bold;
+  font-size: 22px;
+  font-weight: 600;
+  padding-bottom: 25px;
+
+}
+.signup{
+ border:1px solid yellow;
+  margin-top: -16px;
+  margin-left: -16px;
+  margin-right: -16px;
+  padding-bottom: 25px;
+  background-color: #f9e42e;
+}
+.button{
+ border-radius: 5px;
+  font-weight: 800;
+  padding: 12px 0;
+  width: 280px;
+  font-size: 28px;
+  text-align: center;
+  display: block;
+  margin: 25px auto;
+  text-decoration: none;
+  background: #033048;
+  color: #fff;
+}
+.button:hover{background-color:red;}
+
+
+.Read a{
   width: 674px;
   height:73px;
+  font-size: 24px;
+  font-family: bold;
+  font-weight: 600;
+  text-align: right;
+  padding-right: 15px;
+  float:right;
+  text-decoration: none;
+
+}
+.Read a:hover{color:white;}
+
+.gutter{
+  grid-template-columns: 20px;
+  grid-template-rows:20px;
+
 }
